--- a/tree-facet/src/css/parentNode.css
+++ b/tree-facet/src/css/parentNode.css
@@ -1,10 +1,3 @@
-/* .tree-container {
-    list-style: none;
-    padding: 0;
+.content-wrapper{
+   
 }
-.tree-node {
-    padding: 0.75rem 1.25rem;
-}
-.tree-toggler.active {
-    transform: rotate(45deg);
-} */
