--- a/tree-facet/src/css/treeFacet.css
+++ b/tree-facet/src/css/treeFacet.css
@@ -6,7 +6,7 @@
 .box-container{
     border:2px solid black;
     display: inline-block;
-    margin: 5% 5% 5% 5%;
-    padding-right: 5%;
-    min-width: 15%;
+    margin: 5rem;
+    padding-right: 5rem;
+    min-width: 15rem;
 }
